Fixed bug #41566 (SOAP Server not properly generating href attributes)